# ChangeLog for sys-apps/calculate-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-server-2.1.14-r2 (03 Jun 2011)

  03 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14-r2.ebuild,
  +files/calculate-server-2.1.14-rename_param.patch:
  Update for rename param.

*calculate-server-2.1.14-r1 (31 May 2011)

  31 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14-r1.ebuild,
  +files/calculate-server-2.1.14-fix_dovecot.patch:
  Update for bugfix.

*calculate-server-2.1.14 (30 May 2011)

  30 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14.ebuild, calculate-server-9999.ebuild:
  Update calculate-server.

*calculate-server-2.1.13-r3 (20 May 2011)

  20 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.13-r3.ebuild,
  +files/calculate-server-2.1.13-fix_bind.patch:
  Update for fix bind template.

*calculate-server-2.1.13-r2 (17 May 2011)

  17 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.13-r2.ebuild,
  +files/calculate-server-2.1.13-fifo_fix.patch:
  Update server for fix fifo processing.

  13 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-server-2.1.13.ebuild, calculate-server-2.1.13-r1.ebuild,
  calculate-server-9999.ebuild:
  Fix EAPI.

*calculate-server-2.1.13-r1 (01 Apr 2011)

  01 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.13-r1.ebuild,
  +files/calculate-server-2.1.13-rename_cl_update.patch:
  Update for rename cl-update.

*calculate-server-2.1.13 (14 Dec 2010)

  14 Dec 2010; Самоукин Алексей <as@calculate.ru>
  +calculate-server-2.1.13.ebuild:
  Created ejabberd certificate.
  Using ejabberd.

*calculate-server-2.1.12-r7 (02 Dec 2010)

  02 Dec 2010; Самоукин Алексей <as@calculate.ru>
  -calculate-server-2.1.12-r6.ebuild, +calculate-server-2.1.12-r7.ebuild,