@@ -11,7 +11,8 @@ EBUILD calculate-server-2.1.13-r3.ebuild 5261 RMD160 0cba75d6a711127b6a213e6181e
 EBUILD calculate-server-2.1.13.ebuild 4947 RMD160 f84f1384fcd7705a718b5c88b6066e262987ac3b SHA1 596a88a3e393f689a0d76ddb3dc723d03b3eb816 SHA256 feee22c11dd0617ea25164445bd1f074d06a3e30a2b57704d325f71ae6e4bb66
 EBUILD calculate-server-2.1.14-r1.ebuild 5097 RMD160 a433b84fd253706023c4f75668074b2d2849ee3d SHA1 80a4bea5f628e96eb35bce201463fc6285418386 SHA256 3153253ebde93514e7012b818ba1d2111af6fdb99e2d811551654d1a64a1176a
 EBUILD calculate-server-2.1.14-r2.ebuild 5178 RMD160 6e4cd5ef4ad89cd141617d368e47a70b6cbe8be6 SHA1 9b6fb392886dfc9e90036f6693ec7363aa19f5f0 SHA256 74af07dc90e016cfda0f32f7fa5b095cdb140f5b1fb25fe4118932e1f6ae3d43
+EBUILD calculate-server-2.1.14-r3.ebuild 5215 RMD160 ba22727ca23e6d33b1cc7bc4a322fede487af01a SHA1 9eed54db2315e2044cfd338c12162f7e546d6e87 SHA256 6ed68dbb83f685853d5a32d760a7fb292433e6225742f8e88a505e77461b6268
 EBUILD calculate-server-2.1.14.ebuild 4966 RMD160 0a71a8217e53bec9c87669713e3007a5097e9b19 SHA1 6c284957f2841655facc4301cc7a9945d5f95876 SHA256 a7d071a4a1b10e1a03ebec2509be004ddcad0831976a05e88aa2ebbbee4fa986
 EBUILD calculate-server-9999.ebuild 1032 RMD160 1b7daa72a3ed2e85c4d12a9e7acbcd12dfb9254b SHA1 05b16c21743b21cc5dfdde4a917f426b1bfcc46d SHA256 5df5730fe598902d17b3b1d6f591e1a0c16e90c0be7986dfa62390aa6c991b58
-MISC ChangeLog 6724 RMD160 6d27e2b005d6fe4c9a2be9fbde9523528117de3f SHA1 bccbb4cab2a28d756dae0dd38903a87e1c6ba037 SHA256 99a5f346f115e821b9d9700a163c4c9843d2342ecd499320e9388c239bf16210
+MISC ChangeLog 6888 RMD160 764a64fd14ced899a8aa46a25119210641ce401e SHA1 5435b81efcf35dbb323fd68a20e97f71cfb05b57 SHA256 fae17156647529e3618a8c477124161be0a9755733c459168bbe7b679f8969d0
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
