@@ -20,6 +20,7 @@ EBUILD calculate-utilities-2.2.17-r1.ebuild 838 RMD160 730c47dc92b94fb5d654ea051
 EBUILD calculate-utilities-2.2.17-r2.ebuild 838 RMD160 77c6a1fe6fe2a5362c5d687d4bf9d6ae4ba55640 SHA1 90dc1b30046b1207424b969140f3d8659f2298c8 SHA256 bfb285120cd0df0cad0283c2fab7d5b26148f207d2a8e4a2a63becc8a4c84b60
 EBUILD calculate-utilities-2.2.17-r3.ebuild 838 RMD160 41fda29d1dedca885073afba581ccefd3984f398 SHA1 6985b9720b7957900d7048d67334e9c804d873a8 SHA256 7a27dee7d29e940f8d0c2c87f0c4553771c120afa672ca40fde9b0da38cd1504
 EBUILD calculate-utilities-2.2.17-r4.ebuild 838 RMD160 50ebe6b7429697cb961f398ce26b06bd36d76d56 SHA1 f1772a64f1fd35cd7f7d0441eb00e7d5b0b9e8ef SHA256 6eacc7fb52b06b241b5c389eea3f78644bf041f27951d9fa05317873f3745822
+EBUILD calculate-utilities-2.2.17-r5.ebuild 838 RMD160 eabbdf6a93661be23c44928d591759bfd78d7a9b SHA1 92925419376aa9389a819984dadc96c7e830340b SHA256 f352440df69e23dcbab1cac1a7ad53e2db8b334f925402d7a4b278ce6cede7cc
 EBUILD calculate-utilities-2.2.17.ebuild 829 RMD160 29fb0a089833990a144d2f31cad389d4feaad2a6 SHA1 a2a0a45be11ccbb49772f0bc04dc0be2c68ea361 SHA256 0f96a85ef7e239058d62387237df40e3ba19e310e963226398d91413967a60b3
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
-MISC ChangeLog 12725 RMD160 98451e60c850af402e6d3c41f5b477da058a4f37 SHA1 9f76913e4cf4eeaaaa25c0351371f97db4cab715 SHA256 0ccc5341081e5d26d8a98ce088b4acf54bf35f9d795143e69bdd5e4d775253f8
+MISC ChangeLog 12894 RMD160 47d04625c54454c04bd0222e67dc181e38e3e2a4 SHA1 95423f18ea17be0ff717e8c1474da7e0ad304c13 SHA256 d8da1ad5ce09f400a71d20a42eb4077ba7646c2afa564f676614f5bae1919e0c
