@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.17-r5 (24 Jun 2011)
+
+  24 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.17-r5.ebuild:
+  Update for server.
+
 *calculate-utilities-2.2.17-r4 (24 Jun 2011)
 
   24 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
