@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.14-r3 (24 Jun 2011)
+
+  24 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-server-2.1.14-r3.ebuild:
+  Update for fix dep.
+
 *calculate-server-2.1.14-r2 (03 Jun 2011)
 
   03 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
